# oldstuff

./: .directory  .gitignore  CMakeLists.txt  README  README.md  TODO  configurationwidget.cpp  configurationwidget.h  configurationwidget.ui  main.cpp  networkcontroller.cpp  networkcontroller.h  res.qrc  windowsclient.pro
collectioneditor/: CMakeLists.txt  README  actioncontroller.cpp  actioncontroller.h  main.cpp  res.qrc  winres.rc
collectioneditor/models/: collectionsmodel.cpp  collectionsmodel.h  collectiontagfilterproxy.cpp  collectiontagfilterproxy.h  collectiontagsmodel.cpp  collectiontagsmodel.h  couchdatamodel.cpp  couchdatamodel.h  notificationmodel.cpp  notificationmodel.h  servicedatamodel.cpp  servicedatamodel.h
collectioneditor/qml/components/: BoolLabel.qml  ButtonA.qml  ComboBoxA.qml  DoubleLabel.qml  EnumLabel.qml  Input.qml  InputDialog.qml  InputLabel.qml  IntLabel.qml  Loading.qml  MultipleSelectLabel.qml  Panel.qml  Toolbar.qml
collectioneditor/qml/core/: CollectionView.qml  CollectionsView.qml  ConnectView.qml  ServiceView.qml  ServicesView.qml  main.qml  qmlprivate.js
controlshell/: CMakeLists.txt  main.cpp  propertymonitor.cpp  propertymonitor.h
curtain/: CMakeLists.txt  README  curtain.cpp  curtain.h  main.cpp
data/: CMakeLists.txt
data/autostart/: liriexec.desktop
data/dbus_interfaces/: org.freedesktop.hal.xml  org.lirid.receiver.xml
data/dbus_policy/: liri.conf
data/modprobe.d/: blacklist-lirc.conf
data/profiles/applications/: 0d1e0e49-24b0-424d-a696-d4905ae1ce1d.desktop  20e67afc-6199-11dd-90ba-0090f553bd35.desktop  31e67afc-6199-11dd-90ba-0090f553bd36.desktop  5a90875b-43ec-4cfb-b5ad-3ebfb901da68.desktop  76343cd5-b677-4bd8-bcea-63d1dc00cf2f.desktop  9d4d0cf5-7cbc-48ed-b5fa-82778508643e.desktop  afef68ef-664e-4bf1-b07f-875bd735f0f5.desktop  bf5a76d6-72ed-44dc-97d4-cef15a61f2b1.desktop  c2e7f8e5-d620-45d0-95fe-505e4eebe2ab.desktop
data/profiles/desktop/: 18972856-fc83-487b-8d62-a4c992035112.desktop  3c1508ec-ac5f-4526-93e8-9b951f4c3ca0.desktop
data/receiver_load_remote/: ati.3015.6  igorplug.1003.2
data/remote_load_profiles/: 54bc6a32-ddf3-4f0d-9b69-aa377afaeb5e.loader  x10.0536.loader
data/remotes/: 54bc6a32-ddf3-4f0d-9b69-aa377afaeb5e.desktop  54bc6a32-ddf3-4f0d-9b69-aa377afaeb5e.desktop~  cd41b542-c1d2-4524-b834-67c9103947c3.desktop  fd2e30ff-a529-4ca9-a66c-4c3a22fdec04.desktop  x10.0536.desktop
liri/: AUTHORS  CMakeLists.txt  DRIVER_INTERFACE_UNSTABLE  README  liri.kdev4
liri/cmake/: DpkgDeb.cmake
liri/data/: CMakeLists.txt
liri/data/dbus_interfaces/: org.liriexec.control.xml  org.liriexec.receiver.xml
liri/data/dbus_service/: org.liri.Devices.service
liri/data/images/: .directory
liri/data/profiles/applications/: .directory  0d1e0e49-24b0-424d-a696-d4905ae1ce1d.desktop  20e67afc-6199-11dd-90ba-0090f553bd35.desktop  31e67afc-6199-11dd-90ba-0090f553bd36.desktop  52268481-b0e9-41e0-b30c-99a709b7d0b0.desktop  5a90875b-43ec-4cfb-b5ad-3ebfb901da68.desktop  76343cd5-b677-4bd8-bcea-63d1dc00cf2f.desktop  afef68ef-664e-4bf1-b07f-875bd735f0f5.desktop  bf5a76d6-72ed-44dc-97d4-cef15a61f2b1.desktop
liri/data/profiles/desktop/: 0d5bd540-2fd7-11dd-88a7-0090f553bd36.desktop  3c1508ec-ac5f-4526-93e8-9b951f4c3ca0.desktop
liri/doc/: driver_settings_array.txt
liri/doc/file formats/: desktop profile.txt  loader.txt
liri/doc/uml/: liriexec.xmi
liri/src/: CMakeLists.txt  config.h.in  logging.h
liri/src/businterconnect/: BusConnection.h  BusServiceList.cpp  BusServiceList.h  Receiver_DevManager_dbusproxy.h  Receiver_Execution_dbusproxy.cpp  Receiver_Execution_dbusproxy.h
liri/src/drivers/: driver-common.h
liri/src/fileformats/: ApplicationProfileFile.cpp  ApplicationProfileFile.h  DesktopFile.cpp  DesktopFile.h  DesktopProfileFile.cpp  DesktopProfileFile.h  RemoteFile.cpp  RemoteLoadProfilesFile.cpp  RemoteLoadProfilesFile.h
liri/src/gui/: CMakeLists.txt
liri/src/gui/kde4/: .directory  CMakeLists.txt
liri/src/liricontrol/: CMakeLists.txt  ListenObject.cpp  ListenObject.h  main.cpp
liri/src/lirid/: .kdev_include_paths  CMakeLists.txt  Control_dbusif.cpp  Control_dbusif.h  ManagedDeviceList.h
liri/src/lirid/cmake/: FindDlopen.cmake
liri/src/lirid/device/: .directory  (+1 more)
liri/src/liridstarter/: CMakeLists.txt
liri/src/liriexec/: Control.cpp  Control.h  Control_dbusif.cpp  Control_dbusif.h  DeviceList.cpp  DeviceList.h  ExecutionJob.h  liriexec.cpp
src/: CMakeLists.txt  config.h.in
src/businterconnect/: .directory  BusConnection.cpp  BusConnection.h  Control_DevManager_dbusproxy.cpp  Control_DevManager_dbusproxy.h  Control_Execution_dbusproxy.cpp  Control_Execution_dbusproxy.h  Receiver_DevManager_dbusproxy.cpp
src/drivers/: driver-interface-alsa.cpp  driver-interface-alsa.h  driver-interface-infrared.cpp  driver-interface-infrared.h  driver-interface-usb.cpp  driver-interface-usb.h  driver-interface.cpp  driver-interface.h
src/drivers/alsa/: CMakeLists.txt
src/drivers/usb/: CMakeLists.txt
src/fileformats/: ApplicationProfileFile.cpp  RemoteFile.h
src/gui/kde4/: CMakeLists.txt
src/liricontrol/: ListenObject.cpp  ListenObject.h  main.cpp
src/lirid/: CMakeLists.txt  Control.cpp  Control.h  Control_dbusif.h  HalManagedDeviceList.cpp  HalManagedDeviceList.h  HalManagedDeviceList_dbusproxy.cpp  HalManagedDeviceList_dbusproxy.h  ManagedDeviceList.cpp  lirid.cpp  org.lirid.control.xml
src/lirid/device/: DeviceInitThread.cpp  DeviceInitThread.h  DeviceInstance.cpp  DeviceInstance.h  DeviceInstance_dbusif.cpp  DeviceInstance_dbusif.h  DeviceListenThread.cpp  DeviceListenThread.h  DeviceSettings.cpp  DeviceSettings.h  org.lirid.receiver.xml
src/liridhalhelper/: CMakeLists.txt  liricallout.cpp
src/liriexec/: CMakeLists.txt  DeviceList.cpp  DeviceList.h  ExecutionJob.cpp
src/liriexec/actions/: Action.cpp  Action.h  ActionChangeBusInstance.cpp  ActionChangeMode.h  ActionChangeVariable.cpp  ActionGroup.h
src/liriexec/device/: ActionTree.cpp  DeviceInstance.cpp  DeviceInstance.h
src/unittests/: ProfilesAndRemotes.cpp
src/unittests/ProfilesAndRemotes/: ap2.desktop  dp2.desktop  re2.desktop
(+527 files in other folders)
