
SET (liriclient_SRCS ${BUSINTERCONNECTION_SRC}
main.cpp tray.cpp myKUniqueApplication.cpp
)

include_directories( ${KDE4_INCLUDES})

set(EXECUTENAME "liri-tray-kde4")

kde4_ADD_EXECUTABLE(${EXECUTENAME} ${liriclient_SRCS})
TARGET_LINK_LIBRARIES(${EXECUTENAME} ${QT_LIBRARIES} ${KDE4_KDEUI_LIBS} knotifyconfig)

install(TARGETS ${EXECUTENAME} DESTINATION bin CONFIGURATIONS Debug Release)
install( FILES ${EXECUTENAME}.desktop  DESTINATION ${XDG_APPS_INSTALL_DIR} )
install( FILES ${EXECUTENAME}.notifyrc DESTINATION ${DATA_INSTALL_DIR}/${EXECUTENAME} )
#install( FILES ${EXECUTENAME}.kcfg  DESTINATION  ${KCFG_INSTALL_DIR} )
#install( FILES ${EXECUTENAME}ui.rc  DESTINATION  ${DATA_INSTALL_DIR}/${EXECUTENAME} )
